--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 *.h5
 lane_detection_cnn/dataset/
 traffic-sign/dataset/
+traffic_lights/dataset
+traffic_lights/lisa_dataset
+traffic_lights/classified_dataset
